styles/app.css
/* ... */
section[data-order-reversed="true"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  --order-reversed: -1;
}

section[data-order="catchTime"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--catchTime-order, 0));
}

section[data-order="shinyRate"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--shinyRate-order, 0));
}

section[data-order="dexid"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--dexid-order, 0));
}

section[data-order="species"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--species-order, 0));
}

section[data-order="name"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--name-order, 0));
}

section[data-order="game"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(var(--order-reversed) * var(--game-order, 0));
}

section[data-order="lastUpdate"] :is(shiny-card, hunt-card, corbeille-card, friend-card) {
  order: calc(-1 * var(--order-reversed) * var(--lastUpdate-order, 0));
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! PARAMÈTRES !!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#parametres {
  min-height: 100%;
}

form[name="app-settings"],
#a-propos>.section-contenu {
  box-sizing: border-box;
  width: 100%;
  max-width: 65ch;
}

#parametres > .section-contenu,
#a-propos > .section-contenu {
  padding-inline: 16px;
}

h2:not(:first-child) {
  margin-top: 16px;
}

.un-parametre {
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: auto;
  column-gap: 16px;
  min-height: 32px;
  padding-block: 8px;
  text-align: left;
  align-items: center;
  container-type: inline-size;
}

.un-parametre.with-description {
  grid-template-rows: auto auto;
}

.un-parametre.theme > .param {
  grid-template-columns: auto auto auto;
  gap: 8px;
}

.un-parametre + .un-parametre {
  margin-top: 0;
  border-top: 1px solid rgb(var(--outline-variant));
}

.param-nom {
  display: block;
  grid-row: 1;
  grid-column: 1;
  color: rgb(var(--on-surface));
}

.param-description {
  grid-row: 2;
  grid-column: 1;
  color: rgb(var(--on-surface-variant));
}

.param {
  display: grid;
  align-self: start;
  justify-content: end;
  min-width: 150px;
}

.un-parametre > label,
.un-parametre > input,
.un-parametre > input-switch,
.un-parametre > .param {
  grid-row: 1 / -1;
  grid-column: 2;
}

[data-action="check-update"] {
  margin: 0;
}

#parametres:not([data-online-backup]) .if-backup,
#parametres:not([data-online-sharing]) .if-sharing {
  display: none;
}

#parametres[data-online-backup] .no-backup,
#parametres[data-online-sharing] .no-sharing {
  display: none;
}

.info-backup {
  display: none;
  font-size: .8rem;
  color: var(--bg-color);
  background-color: var(--color);
  padding: .2em .5em;
  margin-left: .2em;
  border-radius: 20px;
}

.info-backup.success {
  --color: var(--success-color);
}

.info-backup.failure {
  --color: var(--failure-color);
}

[data-sprites-progress]:empty {
  display: none;
}

[data-sprites-progress]:not(:empty)::before {
  content: '(';
}

[data-sprites-progress]:not(:empty)::after {
  content: ')';
}

#parametres[data-online-backup][data-last-sync=success] .success,
#parametres[data-online-backup][data-last-sync=failure] .failure {
  display: inline;
}

label[for="pick-import-file"],
#pick-import-file {
  width: .1px;
	height: .1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

.account-warning {
  border: 1px solid var(--success-color);
  border-radius: var(--border-radius);
  padding: 8px;
  grid-template-columns: auto;
  box-sizing: border-box;
}

.un-parametre.theme input[type="radio"] + label {
  margin: 0;
}

input-slider[name="theme-hue"] {
  --block-size: var(--tap-safe-size);
  --inline-size: 80cqw;
  --thumb-width: 14px;
}

input-slider[name="theme-hue"]::part(slider-track) {
  --couleurs: white 0%, black 100%;
  background: var(--gradient, transparent);
  width: 100%;
  height: 100%;
  border: none;
  --border: none;
  outline: var(--border, none);
  border-radius: var(--border-radius);
}

input-slider[name="theme-hue"]::part(slider-thumb) {
  background: transparent;
  border: none;
  border-radius: var(--border-radius);
  box-shadow: inset 0 0 0 2px rgb(var(--on-surface)),
              0 0 0 2px rgb(var(--inverse-on-surface));
  outline-offset: 5px;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! À PROPOS DU SHINYDEX !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

.app-icon {
  display: flex;
  width: 120px;
  height: 120px;
  border-radius: 50%;
  overflow: hidden;
  margin: 0 auto;
  border: 1px solid rgb(var(--outline-variant));
}

.app-icon > svg {
  width: 120px;
  height: 120px;
  /*--background-top: rgb(var(--surface-variant));
  --background-bottom: rgb(var(--surface-variant));
  --shiny-stars-color: rgb(var(--primary));
  --unown-color: #3772BC;*/
}

.lien-source {
  color: var(--accent-color);
}
.lien-source .material-icons {
  vertical-align: middle;
  margin-right: 4px;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! SPRITE VIEWER !!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

#sprite-viewer,
#obfuscator {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
}

#sprite-viewer {
  background-color: var(--sprite-viewer-bg-color);
  z-index: var(--z-sprite-viewer);
}

#obfuscator {
  background-color: var(--bg-color);
  z-index: var(--z-obfuscator);
}



/*
 * Notification
 */

.bottom-bar {
  box-shadow: var(--shadow-elevation-medium);
}
/* ... */

